# tray

./: LICENSE
backend/: .env  Cargo.toml  Makefile  bacon.toml
backend/api/: Cargo.toml
backend/api/src/: lib.rs  main.rs
backend/api/src/controller/: mod.rs
backend/api/src/types/: mod.rs
backend/api/tests/: test_api.rs
backend/entity/: Cargo.toml
backend/entity/src/: candidate.rs  mod.rs  poll.rs  prelude.rs  vote.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: main.rs
backend/types/: Cargo.toml
backend/types/src/: lib.rs
frontend/elm/: elm.json
frontend/elm/src/: Main.elm
