[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
http = "0.2.8"
sea-orm = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
